--- a/quotes/fence-quote.html
+++ b/quotes/fence-quote.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-<title>Metal Fence & Gate Painting Quote | Askern DN6</title>
+<title>Wood Fence & Gate Painting or Staining | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs.com/rail-painting.html">
-<meta name="description" content="Get an instant quote for metal fence and gate painting in Askern DN6 and within 6 miles. Enter your fence and gate sizes in centimetres for a realistic guide price.">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/fence-quote.html">
+<meta name="description" content="Wood fence and gate painting or staining in Askern DN6 and within around six miles. Use our calculator to get a realistic guide price by entering sizes in centimetres.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
@@ -32,10 +32,7 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{
-background:#fff;
-color:#000;
-}
+.call-btn:hover{background:#fff;color:#000;}
 
 /* MAIN */
 main{
@@ -47,81 +44,54 @@ line-height:1.6;
 color:#000;
 }
 h1,h2,h3{color:#000;}
-label{
-display:block;
-margin-top:12px;
-font-weight:bold;
-}
+label{display:block;margin-top:12px;font-weight:bold;}
 input{
-width:100%;
-padding:10px;
-margin-top:5px;
-font-size:16px;
-border:2px solid #000;
+width:100%;padding:10px;margin-top:5px;font-size:16px;border:2px solid #000;
 }
 button{
-margin-top:20px;
-padding:14px 30px;
-font-size:18px;
-background:#000;
-color:#fff;
-border:2px solid #000;
-border-radius:6px;
-cursor:pointer;
+margin-top:20px;padding:14px 30px;font-size:18px;
+background:#000;color:#fff;border:2px solid #000;border-radius:6px;cursor:pointer;
 }
-button:hover{
-background:#fff;
-color:#000;
-}
+button:hover{background:#fff;color:#000;}
 .result{
-margin-top:25px;
-padding:20px;
-background:#f4f4f4;
-border-radius:6px;
-font-size:18px;
-font-weight:bold;
+margin-top:25px;padding:20px;background:#f4f4f4;border-radius:6px;
+font-size:18px;font-weight:bold;
 }
-.cta{
-margin-top:15px;
-text-align:center;
-}
+.cta{text-align:center;margin-top:15px;}
 .cta a{
-font-size:20px;
-padding:14px 30px;
-background:#000;
-color:#fff;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-display:inline-block;
-margin-top:10px;
+font-size:20px;padding:14px 30px;background:#000;color:#fff;
+text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;
+display:inline-block;margin-top:10px;
 }
-.cta a:hover{
-background:#fff;
-color:#000;
-}
+.cta a:hover{background:#fff;color:#000;}
 
 /* FOOTER */
 .site-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
+background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;
 }
-.footer-services{
-background:black;
-padding:20px;
-margin-top:15px;
-}
-.footer-services a{
-color:white;
-margin:0 10px;
-text-decoration:none;
-}
+.footer-services{background:black;padding:20px;margin-top:15px;}
+.footer-services a{color:white;margin:0 10px;text-decoration:none;}
 </style>
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"telephone": "07735873694",
+"areaServed": {
+"@type": "AdministrativeArea",
+"name": "Within approximately 6 miles of Askern DN6"
+},
+"description": "Wood fence and gate painting or staining based in Askern DN6, serving surrounding areas within roughly six miles.",
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Askern",
+"postalCode": "DN6",
+"addressCountry": "GB"
+}
+}
+</script>
 </head>
 
 <body>
@@ -137,27 +107,31 @@ text-decoration:none;
 
 <main>
 
-<h1>Metal Fence & Gate Painting in Askern DN6</h1>
+<h1>Wood Fence & Gate Painting or Staining in Askern DN6</h1>
 
-<p>Fresh paint on your metal fence or gate not only improves how your home looks, it also protects the metal from rust, weather damage, and long-term wear. Our professional metal painting service in Askern DN6 gives your fence or gate a clean, smart finish that lasts.</p>
+<p>Painting or staining your wooden fence and gate protects the timber from rot, moisture, sun damage, and general wear. It also makes your garden look cleaner, smarter, and better maintained.</p>
 
-<p>We work on all types of metal fencing and gates including wrought iron, steel, tubular fencing, security fencing, and decorative railings. Whether it’s a small garden gate or a full boundary fence, we prepare, prime, and paint it properly for a durable result.</p>
+<p>We work on all types of wooden fencing and gates including panels, feather edge fencing, posts, trellis, and garden gates. Whether you want a solid colour paint or a natural wood stain, we prepare and finish it properly.</p>
 
 <p>This page includes a simple calculator to give you an instant guide price. It’s designed to be easy to use and realistic, so you know roughly what to expect before calling us.</p>
 
-<h2>How Our Fence & Gate Painting Works</h2>
+<h2>Our Service Area</h2>
 
-<p>Every job starts with proper preparation. We remove loose paint, rust, and dirt, then treat the metal before applying high-quality metal paint designed to resist rust and fading.</p>
+<p>We are based in Askern DN6 and provide wood fence and gate painting or staining across the surrounding area within roughly six miles. This includes residential streets, villages, farms, and rural properties in every direction from Askern. If you are near Askern and can reach us within a short drive, we can usually cover your job.</p>
 
-<p>Good preparation is the key to a long-lasting finish. Rushing this stage is why many paint jobs fail early – we don’t cut corners.</p>
+<h2>How Our Wood Fence & Gate Painting or Staining Works</h2>
 
-<h2>Fence & Gate Painting Quote Calculator</h2>
+<p>Every job starts with preparation. We clean the wood, remove loose paint or stain, and allow it to dry properly before applying new coatings.</p>
 
-<p>Use the calculator below to get a guide price for painting your metal fence and/or gate in Askern and within roughly six miles of the area.</p>
+<p>Good preparation is the key to a long-lasting finish. Skipping this step is why many fence paint and stain jobs fail early – we make sure it’s done right.</p>
+
+<h2>Wood Fence & Gate Quote Calculator</h2>
+
+<p>Use the calculator below to get a guide price for painting or staining your wooden fence and/or gate in Askern and within roughly six miles of the area.</p>
 
 <p>Measure the total length and height of your fence and gate in <strong>centimetres</strong>. If you don’t have a fence or gate, just enter <strong>0</strong>.</p>
 
-<p><em>This is a guide price. Very rusty metal, awkward access, or special finishes may slightly affect the final quote.</em></p>
+<p><em>This is a guide price. Very rough timber, heavy old coatings, or difficult access may slightly affect the final quote.</em></p>
 
 <h2>Fence Measurements (centimetres)</h2>
 <label for="fenceLength">Fence length (cm)</label>
@@ -175,9 +149,7 @@ text-decoration:none;
 
 <button type="button" onclick="calculate()">Calculate Quote</button>
 
-<div class="result" id="result">
-Enter measurements to calculate your quote.
-</div>
+<div class="result" id="result">Enter measurements to calculate your quote.</div>
 
 <div id="cta" class="cta" style="display:none;">
 <h3>Your Estimated Price</h3>
@@ -187,23 +159,23 @@ Enter measurements to calculate your quote.
 
 <h2>Frequently Asked Questions</h2>
 
-<h3>How long does metal fence and gate paint last?</h3>
-<p>When metal is properly cleaned, treated, primed, and painted, the finish can last for many years. Exposure to weather, sun, and moisture affects lifespan, but good preparation makes a huge difference.</p>
+<h3>Is painting or staining better for wood?</h3>
+<p>Paint gives a solid colour and strong protection. Stain soaks into the wood and shows the grain. Both protect the timber when applied properly.</p>
 
-<h3>Do you remove rust before painting?</h3>
-<p>Yes. Loose rust and flaking paint are removed first. The metal is then treated before painting so the new coating sticks properly and helps prevent rust returning.</p>
+<h3>How long does fence paint or stain last?</h3>
+<p>Most finishes last several years depending on weather exposure and preparation. Proper cleaning and drying makes a big difference.</p>
 
-<h3>What type of paint do you use?</h3>
-<p>We use quality metal paints designed for outdoor use. These are made to resist rust, fading, and peeling in British weather conditions.</p>
+<h3>Do you clean fences before painting or staining?</h3>
+<p>Yes. Dirt, algae, and loose coatings are removed first so the new finish sticks properly.</p>
 
 <h3>Is the calculator price final?</h3>
-<p>The calculator gives a realistic guide price. Very heavy rust, difficult access, unusual shapes, or special finishes may slightly change the final quote after we see the job.</p>
+<p>The calculator gives a realistic guide price. Very rough wood, heavy old coatings, or awkward access may slightly change the final quote.</p>
 
-<h3>What areas do you cover?</h3>
-<p>We are based in Askern DN6 and cover roughly a six mile radius around the area, focusing on local homes and properties.</p>
+<h3>How far will you travel?</h3>
+<p>We mainly work within around six miles of Askern DN6. If you are just outside this area, it’s still worth calling to check.</p>
 
 <h3>Do you offer free quotes?</h3>
-<p>Yes. All quotes are free and come with no obligation. The calculator helps you get an idea before you call.</p>
+<p>Yes. All quotes are free and come with no obligation.</p>
 
 </main>
 
@@ -226,79 +198,19 @@ const fenceHeight = parseFloat(document.getElementById('fenceHeight').value)||0;
 const gateLength = parseFloat(document.getElementById('gateLength').value)||0;
 const gateHeight = parseFloat(document.getElementById('gateHeight').value)||0;
 
-// Convert cm to metres
 const fenceArea = (fenceLength/100) * (fenceHeight/100);
 const gateArea = (gateLength/100) * (gateHeight/100);
-
 const totalArea = fenceArea + gateArea;
-const ratePerSqM = 24;
-let total = totalArea * ratePerSqM;
 
+const rate = 24;
+let total = totalArea * rate;
 total = Math.max(total,0);
 
 document.getElementById('result').innerHTML =
-`Estimated Fence & Gate Painting Cost:<br>£${total.toFixed(2)}<br>
-<small>Total area: ${totalArea.toFixed(2)} m² at £24 per m²</small>`;
+`Estimated Wood Fence & Gate Cost:<br>£${total.toFixed(2)}<br>
+<small>${totalArea.toFixed(2)} m² at £24 per m²</small>`;
 
 document.getElementById('cta').style.display = 'block';
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "How long does metal fence and gate paint last?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "When metal is properly cleaned, treated, primed, and painted, the finish can last for many years. Exposure to weather, sun, and moisture affects lifespan, but good preparation makes a huge difference."
-}
-},
-{
-"@type": "Question",
-"name": "Do you remove rust before painting?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes. Loose rust and flaking paint are removed first. The metal is then treated before painting so the new coating sticks properly and helps prevent rust returning."
-}
-},
-{
-"@type": "Question",
-"name": "What type of paint do you use?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "We use quality metal paints designed for outdoor use. These are made to resist rust, fading, and peeling in British weather conditions."
-}
-},
-{
-"@type": "Question",
-"name": "Is the calculator price final?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "The calculator gives a realistic guide price. Very heavy rust, difficult access, unusual shapes, or special finishes may slightly change the final quote after we see the job."
-}
-},
-{
-"@type": "Question",
-"name": "What areas do you cover?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "We are based in Askern DN6 and cover roughly a six mile radius around the area, focusing on local homes and properties."
-}
-},
-{
-"@type": "Question",
-"name": "Do you offer free quotes?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes. All quotes are free and come with no obligation. The calculator helps you get an idea before you call."
-}
-}
-]
 }
 </script>
 
