--- a/quotes/fence-quote.html
+++ b/quotes/fence-quote.html
@@ -7,89 +7,39 @@
 <title>Wood Fence & Gate Painting or Staining | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/fence-quote.html">
-<meta name="description" content="Wood fence and gate painting or staining in Askern DN6 and within around six miles. Use our calculator to get a realistic guide price by entering sizes in centimetres.">
+<meta name="description" content="Wood fence and gate painting or staining in Askern DN6 and within around six miles. Use our calculator to get a realistic guide price by entering sizes in metres.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-/* HEADER */
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #000;
-}
+header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #000;}
 .logo{max-height:90px;width:auto;}
-.call-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
+.call-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#000;color:#fff;font-size:19px;text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;}
 .call-btn:hover{background:#fff;color:#000;}
-
-/* MAIN */
-main{
-max-width:950px;
-margin:40px auto;
-padding:0 15px;
-font-family:Arial,sans-serif;
-line-height:1.6;
-color:#000;
-}
+main{max-width:950px;margin:40px auto;padding:0 15px;font-family:Arial,sans-serif;line-height:1.6;color:#000;}
 h1,h2,h3{color:#000;}
 label{display:block;margin-top:12px;font-weight:bold;}
-input{
-width:100%;padding:10px;margin-top:5px;font-size:16px;border:2px solid #000;
-}
-button{
-margin-top:20px;padding:14px 30px;font-size:18px;
-background:#000;color:#fff;border:2px solid #000;border-radius:6px;cursor:pointer;
-}
+input,select{width:100%;padding:10px;margin-top:5px;font-size:16px;border:2px solid #000;}
+button{margin-top:20px;padding:14px 30px;font-size:18px;background:#000;color:#fff;border:2px solid #000;border-radius:6px;cursor:pointer;}
 button:hover{background:#fff;color:#000;}
-.result{
-margin-top:25px;padding:20px;background:#f4f4f4;border-radius:6px;
-font-size:18px;font-weight:bold;
-}
+.result{margin-top:25px;padding:20px;background:#f4f4f4;border-radius:6px;font-size:18px;font-weight:bold;}
 .cta{text-align:center;margin-top:15px;}
-.cta a{
-font-size:20px;padding:14px 30px;background:#000;color:#fff;
-text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;
-display:inline-block;margin-top:10px;
-}
+.cta a{font-size:20px;padding:14px 30px;background:#000;color:#fff;text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;display:inline-block;margin-top:10px;}
 .cta a:hover{background:#fff;color:#000;}
-
-/* FOOTER */
-.site-footer{
-background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;
-}
+.site-footer{background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;}
 .footer-services{background:black;padding:20px;margin-top:15px;}
 .footer-services a{color:white;margin:0 10px;text-decoration:none;}
 </style>
 
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Repairs 4U",
-"telephone": "07735873694",
-"areaServed": {
-"@type": "AdministrativeArea",
-"name": "Within approximately 6 miles of Askern DN6"
-},
-"description": "Wood fence and gate painting or staining based in Askern DN6, serving surrounding areas within roughly six miles.",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"postalCode": "DN6",
-"addressCountry": "GB"
-}
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"telephone":"07735873694",
+"description":"Wood fence and gate painting or staining based in Askern DN6, serving surrounding areas within roughly six miles.",
+"areaServed":{"@type":"AdministrativeArea","name":"Within approximately 6 miles of Askern DN6"},
+"address":{"@type":"PostalAddress","addressLocality":"Askern","postalCode":"DN6","addressCountry":"GB"}
 }
 </script>
 </head>
@@ -116,36 +66,36 @@ background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;f
 <p>This page includes a simple calculator to give you an instant guide price. It’s designed to be easy to use and realistic, so you know roughly what to expect before calling us.</p>
 
 <h2>Our Service Area</h2>
-
 <p>We are based in Askern DN6 and provide wood fence and gate painting or staining across the surrounding area within roughly six miles. This includes residential streets, villages, farms, and rural properties in every direction from Askern. If you are near Askern and can reach us within a short drive, we can usually cover your job.</p>
 
 <h2>How Our Wood Fence & Gate Painting or Staining Works</h2>
-
 <p>Every job starts with preparation. We clean the wood, remove loose paint or stain, and allow it to dry properly before applying new coatings.</p>
-
 <p>Good preparation is the key to a long-lasting finish. Skipping this step is why many fence paint and stain jobs fail early – we make sure it’s done right.</p>
 
 <h2>Wood Fence & Gate Quote Calculator</h2>
-
 <p>Use the calculator below to get a guide price for painting or staining your wooden fence and/or gate in Askern and within roughly six miles of the area.</p>
-
-<p>Measure the total length and height of your fence and gate in <strong>centimetres</strong>. If you don’t have a fence or gate, just enter <strong>0</strong>.</p>
-
+<p>Measure the total length and height of your fence and gate in <strong>metres</strong>. If you don’t have a fence or gate, just enter <strong>0</strong>.</p>
 <p><em>This is a guide price. Very rough timber, heavy old coatings, or difficult access may slightly affect the final quote.</em></p>
 
-<h2>Fence Measurements (centimetres)</h2>
-<label for="fenceLength">Fence length (cm)</label>
-<input type="number" id="fenceLength" min="0">
+<h2>Fence Measurements (metres)</h2>
+<label for="fenceLength">Fence length (m)</label>
+<input type="number" id="fenceLength" min="0" step="0.1">
+<label for="fenceHeight">Fence height (m)</label>
+<input type="number" id="fenceHeight" min="0" step="0.1">
 
-<label for="fenceHeight">Fence height (cm)</label>
-<input type="number" id="fenceHeight" min="0">
+<h2>Gate Measurements (metres)</h2>
+<label for="gateLength">Gate width (m)</label>
+<input type="number" id="gateLength" min="0" step="0.1">
+<label for="gateHeight">Gate height (m)</label>
+<input type="number" id="gateHeight" min="0" step="0.1">
 
-<h2>Gate Measurements (centimetres)</h2>
-<label for="gateLength">Gate width (cm)</label>
-<input type="number" id="gateLength" min="0">
-
-<label for="gateHeight">Gate height (cm)</label>
-<input type="number" id="gateHeight" min="0">
+<h2>Painting Both Sides?</h2>
+<label for="bothSides">Will the fence be painted or stained on both sides?</label>
+<select id="bothSides">
+<option value="1">No – one side only</option>
+<option value="2">Yes – both sides</option>
+</select>
+<p><em>Painting both sides roughly doubles the amount of work and materials.</em></p>
 
 <button type="button" onclick="calculate()">Calculate Quote</button>
 
@@ -197,10 +147,11 @@ const fenceLength = parseFloat(document.getElementById('fenceLength').value)||0;
 const fenceHeight = parseFloat(document.getElementById('fenceHeight').value)||0;
 const gateLength = parseFloat(document.getElementById('gateLength').value)||0;
 const gateHeight = parseFloat(document.getElementById('gateHeight').value)||0;
+const bothSides = parseFloat(document.getElementById('bothSides').value)||1;
 
-const fenceArea = (fenceLength/100) * (fenceHeight/100);
-const gateArea = (gateLength/100) * (gateHeight/100);
-const totalArea = fenceArea + gateArea;
+const fenceArea = fenceLength * fenceHeight;
+const gateArea = gateLength * gateHeight;
+const totalArea = (fenceArea + gateArea) * bothSides;
 
 const rate = 24;
 let total = totalArea * rate;
