--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -224,6 +224,15 @@ Enter measurements to calculate your quote.
 
 </main>
 
+<!-- Related Instant Quotes Section -->
+<section style="text-align:center; margin:40px 0;">
+<h2>You may also be interested in some of our other instant quotes for exterior painting</h2>
+<div style="margin-top:15px;">
+<a href="https://homerepairs4u.com/quotes/fence-quote.html" class="call-btn" style="margin-right:10px;">External House Painting</a>
+<a href="https://homerepairs4u.com/quotes/rail-painting.html" class="call-btn">Metal Rail & Gate Painting</a>
+</div>
+</section>
+
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 <div class="footer-services">
