--- a/quotes/rail-painting.html
+++ b/quotes/rail-painting.html
@@ -212,7 +212,7 @@ Enter measurements to calculate your quote.
 <h2>You may also be interested in some of our other instant quotes for exterior painting</h2>
 <div style="margin-top:15px;">
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="call-btn" style="margin-right:10px;">External House Painting</a>
-<a href="https://homerepairs4u.com/quotes/rail-painting.html" class="call-btn">Metal Rail & Gate Painting</a>
+<a href="https://homerepairs4u.com/quotes/fence-quote.html" class="call-btn">Metal Rail & Gate Painting</a>
 </div>
 </section>
 
