--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -164,7 +164,7 @@ The chart below shows more Sandtex exterior colours, providing additional choice
 <section style="text-align:center; margin:40px 0;">
 <h2>You may also be interested in some of our other instant quotes for exterior painting</h2>
 <div style="margin-top:15px;">
-<a href="https://homerepairs4u.com/quotes/fence-quote.html" class="call-btn" style="margin-right:10px;">External House Painting</a>
+<a href="https://homerepairs4u.com/quotes/fence-quote.html" class="call-btn" style="margin-right:10px;">Fence painting</a>
 <a href="https://homerepairs4u.com/quotes/rail-painting.html" class="call-btn">Metal Rail & Gate Painting</a>
 </div>
 </section>
