--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853901540">
+</script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'AW-17853901540');
+</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
@@ -156,10 +166,7 @@ box-shadow: 0 0 20px #000;
 <a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
 <br>
-<a href="tel:07735873694"
-class="call-btn"
-📞 Call Now: 07735 873694
-</a>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
 <main>
@@ -302,10 +309,7 @@ loading="lazy">
 </main>
 
 <footer>
-<a href="tel:07735873694"
-class="call-btn"
-📞 Call Now: 07735 873694
-</a>
+<p>📞 Call 07735 873694</p>
 <div>
 <a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
 <a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
