--- a/locations.html
+++ b/locations.html
@@ -278,7 +278,7 @@ font-weight:bold;
 <h2>Our Coverage Map</h2>
 <p>Here’s a map showing the areas we cover within approximately six miles of Askern DN6, including all villages and settlements across DN1–DN6:</p>
 <div class="map-container">
-<!-- Paste your live Google My Maps embed code here -->
+<iframe src="https://www.google.com/maps/d/embed?mid=17SA7j4TjH3_hD25_mt59cvNsJpaPYl4&ehbc=2E312F" width="640" height="480"></iframe>
 <iframe
 src="YOUR-GOOGLE-MY-MAPS-EMBED-URL"
 width="100%" height="100%" style="border:0;"
