--- a/locations.html
+++ b/locations.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf‑8" />
+<meta name="viewport" content="width=device‑width,initial‑scale=1" />
 
-<title>Locations Covered by Home Repairs 4U | Askern DN6 and Surrounding Areas</title>
+<title>Home Repairs 4U Locations | Askern DN6 and Surrounding Areas</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/locations.html">
-<meta name="description" content="Home Repairs 4U provides professional painting, decorating, fence and gate painting or staining, and home repair services across DN1 to DN6 postcode areas, including all surrounding villages within roughly six miles of Askern DN6. Free no-obligation quotes.">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/fence-quote.html">
+<meta name="description" content="Home Repairs 4U provides exterior painting, fence & gate painting or staining services across Askern DN6 and all DN1–DN6 villages, hamlets, and settlements within a six‑mile radius.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
@@ -47,51 +47,41 @@ line-height:1.6;
 color:#000;
 }
 h1,h2,h3{color:#000;}
-ul{margin:10px 0 20px 20px;}
-p{margin:10px 0;}
-a{color:#000;text-decoration:underline;}
-
-/* FAQ Accordion */
-.faq-item{
-border-bottom:1px solid #ddd;
-margin-bottom:10px;
+p{margin-top:10px;}
+.map-container {
+position: relative;
+width: 100%;
+padding-bottom: 56.25%; /* 16:9 */
+margin-bottom: 40px;
+border: 2px solid #000;
+border-radius: 6px;
 }
-.faq-question{
-cursor:pointer;
-padding:12px;
-background:#f0f0f0;
-border-radius:4px;
+.map-container iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border: 0;
+border-radius: 6px;
+}
+
+/* CTA */
+.cta a.call-btn{
+display:inline-block;
+margin:10px 5px;
+padding:14px 30px;
+background:#000;
+color:#fff;
+font-size:18px;
 font-weight:bold;
-}
-.faq-answer{
-padding:12px;
-display:none;
-background:#fafafa;
-border-radius:4px;
-margin-top:5px;
-}
-.faq-question:hover{
-background:#e0e0e0;
-}
-
-/* MAP */
-.map-container{
-width:100%;
-height:400px;
-margin-bottom:40px;
-border:2px solid #000;
+text-decoration:none;
 border-radius:6px;
-}
-
-/* Free Quote Callout */
-.quote-callout{
 border:2px solid #000;
-padding:12px 15px;
-border-radius:6px;
-background:#f9f9f9;
-font-weight:bold;
-margin:20px 0;
-text-align:center;
+}
+.cta a.call-btn:hover{
+background:#fff;
+color:#000;
 }
 
 /* FOOTER */
@@ -113,95 +103,36 @@ color:white;
 margin:0 10px;
 text-decoration:none;
 }
-
-/* Highlighted Services Boxes */
-.service-box{
-border:2px solid #000;
-padding:15px;
-border-radius:6px;
-margin-bottom:15px;
-background:#f9f9f9;
-font-weight:bold;
-}
 </style>
 
-<!-- LocalBusiness Schema -->
+<!-- LocalBusiness / Service Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"LocalBusiness",
 "name":"Home Repairs 4U",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"@id":"https://homerepairs4u.com/",
+"url":"https://homerepairs4u.com/",
 "telephone":"07735873694",
-"description":"Home Repairs 4U provides professional painting, decorating, fence and gate painting or staining, and home repair services across DN1 to DN6 postcode areas, including all surrounding villages within roughly six miles of Askern DN6.",
 "address":{
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "South Yorkshire",
-"postalCode": "DN6 0QA",
-"addressCountry": "GB"
+"@type":"PostalAddress",
+"streetAddress":"35 Airstone Road",
+"addressLocality":"Askern",
+"addressRegion":"South Yorkshire",
+"postalCode":"DN6 0QA",
+"addressCountry":"UK"
 },
-"areaServed":[
-"Askern", "Blyth", "Skellow", "Womersley", "Harlington", "Hickleton",
-"Thorpe Hesley", "Brodsworth", "Barnby Dun", "Balby", "Bentley", "Conisbrough",
-"Edlington", "Finningley", "Mexborough", "Rossington", "New Rossington",
-"Woodlands", "Sprotbrough", "Warmsworth", "Carcroft", "Old Edlington",
-"And all surrounding villages within roughly six miles of Askern DN6"
-]
-}
-</script>
-
-<!-- GeoCoordinates Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "Place",
-"name": "Home Repairs 4U",
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.6020,
-"longitude": -1.0390
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{
+"@type":"GeoCoordinates",
+"latitude":53.6020,
+"longitude":-1.0390
 },
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "South Yorkshire",
-"postalCode": "DN6 0QA",
-"addressCountry": "GB"
-}
-}
-</script>
-
-<!-- Service Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"Service",
-"name":"Painting, Decorating & Home Repairs",
-"description":"Home Repairs 4U offers professional exterior and interior painting, fence and gate painting or staining, garden maintenance, and general home repair services across DN1-DN6 and surrounding villages.",
-"provider":{
-"@type":"LocalBusiness",
-"name":"Home Repairs 4U",
-"telephone":"07735873694"
+"geoRadius":6000
 },
-"areaServed":"Within approximately 6 miles of Askern DN6"
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We provide services across DN1 to DN6 postcode areas and all surrounding villages within approximately six miles of Askern DN6. Call 07735 873694 to check your address."}},
-{"@type":"Question","name":"Do you offer free quotes?","acceptedAnswer":{"@type":"Answer","text":"Yes. All quotes are free and come with no obligation. Schedule your visit today!"}},
-{"@type":"Question","name":"What services do you provide?","acceptedAnswer":{"@type":"Answer","text":"We offer exterior and interior painting, decorating, fence and gate painting or staining, garden maintenance, and general home repairs. Check our House Painting Calculator for instant quotes."}},
-{"@type":"Question","name":"Can you paint fences and gates both sides?","acceptedAnswer":{"@type":"Answer","text":"Yes. We can paint or stain both sides for a professional finish and long-lasting protection."}},
-{"@type":"Question","name":"How long will the work take?","acceptedAnswer":{"@type":"Answer","text":"Duration depends on property size and work type across DN1–DN6 and nearby villages. We provide an estimated timeframe during your free quote visit."}},
-{"@type":"Question","name":"Do you provide advice on paint types and finishes?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide professional advice on paint types, finishes, and materials suitable for your property and fence or gate. Call 07735 873694 for a consultation."}}
-]
+"description":"Exterior painting, fence & gate painting/staining and home repair services in Askern DN6 and all DN1–DN6 villages."
 }
 </script>
 
@@ -220,122 +151,57 @@ font-weight:bold;
 
 <main>
 
-<h1>Locations Covered by Home Repairs 4U</h1>
+<h1>Home Repairs 4U – Locations We Serve</h1>
 
-<p>Home Repairs 4U provides professional painting, decorating, fence and gate painting or staining, and home repair services across Askern DN6 and the wider DN postcode area, covering DN1 to DN6 and all surrounding villages within roughly six miles. We deliver reliable, high-quality services for residential properties, gardens, fences, gates, and exterior painting or staining.</p>
-
-<p>Our team visits your property to provide a free, no-obligation quote, offering expert advice on materials, finishes, and colour options to protect and enhance your home. 📞 <a href="tel:07735873694" title="Call Home Repairs 4U now">Call now</a> to schedule your visit.</p>
-
-<div class="quote-callout">
-📞 Call 07735 873694 today for a free no-obligation quote within six miles of Askern DN6!
-</div>
-
-<h2>Postcode Areas We Cover</h2>
-<ul>
-<li><a id="dn1"></a>DN1 – Doncaster town centre, Bentley, Balby, Hyde Park</li>
-<li><a id="dn2"></a>DN2 – Sprotbrough, Warmsworth, Intake, Hexthorpe</li>
-<li><a id="dn3"></a>DN3 – Rossington, Bessacarr, Wheatley, Edenthorpe</li>
-<li><a id="dn4"></a>DN4 – Finningley, New Edlington, Old Edlington, Woodlands</li>
-<li><a id="dn5"></a>DN5 – Askern, Womersley, Blyth, Skellow</li>
-<li><a id="dn6"></a>DN6 – Harlington, Hickleton, Owston, Thorpe Hesley, Brodsworth, Tickhill, Barnby Dun</li>
-</ul>
-
-<h2>Villages and Surrounding Areas</h2>
-<ul>
-<li>Adwick</li>
-<li>Balby</li>
-<li>Blyth</li>
-<li>Bramwith</li>
-<li>Brodsworth</li>
-<li>Conisbrough</li>
-<li>Edlington</li>
-<li>Finningley</li>
-<li>Hickleton</li>
-<li>Harlington</li>
-<li>Mexborough</li>
-<li>Owston</li>
-<li>Skellow</li>
-<li>Thorpe Hesley</li>
-<li>Womersley</li>
-<li>Woodlands</li>
-<li>Tickhill</li>
-<li>Barnby Dun</li>
-<li>Sprotbrough</li>
-<li>Warmsworth</li>
-<li>Carcroft</li>
-<li>New Rossington</li>
-<li>Balby Bridge</li>
-<li>Finningley Bridge</li>
-<li>And all other nearby villages and settlements within roughly six miles of Askern DN6</li>
-</ul>
-
-<h2>Highlighted Services</h2>
-<div class="service-box">✔ Fence & Gate Painting/Staining — durable finish for all wood surfaces</div>
-<div class="service-box">✔ Exterior House Painting — professional, weatherproof finishes</div>
-<div class="service-box">✔ Garden Maintenance — tidy, functional, and visually appealing outdoor spaces</div>
-<div class="service-box">✔ General Home Repairs — from small fixes to full exterior improvements</div>
+<p>Home Repairs 4U provides professional exterior painting, fence and gate painting or staining, and home repair services across Askern DN6 and all surrounding areas within a six‑mile radius. We focus on the DN1, DN2, DN3, DN4, DN5 and DN6 postcode areas, ensuring local expertise, fast response times, and excellent customer service.</p>
 
 <h2>Our Coverage Map</h2>
-<p>Here’s a map showing the areas we cover within approximately six miles of Askern DN6, including all villages and settlements across DN1–DN6:</p>
+<p>Below is an interactive map showing the full area we serve within approximately six miles of Askern DN6, covering all villages and settlements listed on this page:</p>
+
 <div class="map-container">
-<iframe src="https://www.google.com/maps/d/embed?mid=17SA7j4TjH3_hD25_mt59cvNsJpaPYl4&ehbc=2E312F" width="640" height="480"></iframe>
-<iframe
-src="YOUR-GOOGLE-MY-MAPS-EMBED-URL"
-width="100%" height="100%" style="border:0;"
+<iframe src="https://www.google.com/maps/d/embed?mid=17SA7j4TjH3_hD25_mt59cvNsJpaPYl4&ehbc=2E312F" width="640" height="480">
 allowfullscreen=""
 loading="lazy">
 </iframe>
 </div>
 
+<h2>All Postcodes, Towns, Villages & Hamlets We Serve</h2>
+
+<!-- Comprehensive List -->
+<p>We serve all towns, villages, and hamlets in the DN1, DN2, DN3, DN4, DN5 and DN6 postcode areas. These include:</p>
+
+<p>Askern, Airmyn, Arksey, Armthorpe, Balby, Balby Carr, Barnby Dun, Barnburgh, Beckett, Bessacarr, Bentley, Braithwell, Branton, Brodsworth, Campsall, Cusworth, Conisbrough, Denaby Main, Doncaster city centre, Edenthorpe, Edlington, Fenwick, Finningley, Hampole, Harlington, High Melton, Hickleton, Intake, Kirk Bramwith, Kirk Sandall, Loversall, Moss, Mossend, New Edlington, New Rossington, Norton, Owston, Rossington, Scawsby, Skelbrooke, Skellow, Sprotbrough, Sykehouse, Thorpe Hesley, Thorpe in Balne, Wadworth, Warmsworth, Woodlands, Tickhill, Toll Bar, Arksey Woodlands, Wheatley, Wheatley Hills, Hexthorpe, Hilltop, Hooton Pagnell, Cadeby, Campsey, Campsall, Hampole, Sykehouse, Edenthorpe, Kirk Sandall, Armthorpe North, Armthorpe South, Balby North, Balby East, Balby West, Denaby Village, Bessacarr Grange, Bessacarr Woods, Cusworth Lane areas, Scawsby Road neighbourhoods, and all smaller hamlets and settlements within a six‑mile radius of Askern DN6.</p>
+
+<p>If your property is in any of these locations, Home Repairs 4U can provide fence painting, gate staining, house painting, exterior decorating, pressure washing, and general home repairs directly to your home or business.</p>
+
 <h2>Why Choose Home Repairs 4U?</h2>
-<ul>
-<li>Exterior and interior painting</li>
-<li>Fence and gate painting or staining</li>
-<li>Garden maintenance</li>
-<li>General home repairs and decorating</li>
-<li>Advice on colour, materials, and protection</li>
-<li>Quick, reliable, friendly service within six miles of Askern</li>
-</ul>
+<p>We specialise in exterior services that protect and enhance your property. Our experienced team uses professional methods and quality materials to ensure long‑lasting results. By focusing on local postcodes and villages, we offer personalised service with fast response times and exceptional workmanship.</p>
+
+<h2>Instant Quotes</h2>
+<p>We offer instant online quote calculators for many of our services, including fence painting, gate staining, and house painting. These calculators are tailored to the local DN1–DN6 region so you get a realistic estimate quickly and easily.</p>
 
 <h2>Frequently Asked Questions</h2>
-<div class="faq-item">
-<div class="faq-question">Which areas do you cover?</div>
-<div class="faq-answer">We provide services across DN1 to DN6 postcode areas and all surrounding villages within approximately six miles of Askern DN6. 📞 <a href="tel:07735873694" title="Call Home Repairs 4U now">Call 07735 873694</a> to check your address.</div>
-</div>
-<div class="faq-item">
-<div class="faq-question">Do you offer free quotes?</div>
-<div class="faq-answer">Yes. All quotes are free and come with no obligation. Schedule your visit today! 📞 <a href="tel:07735873694" title="Call Home Repairs 4U now">Call now</a></div>
-</div>
-<div class="faq-item">
-<div class="faq-question">What services do you provide?</div>
-<div class="faq-answer">We offer exterior and interior painting, decorating, fence and gate painting or staining, garden maintenance, and general home repairs. Check our <a href="https://homerepairs4u.com/quotes/house-painting.html" title="Instant house painting quote">House Painting Calculator</a> for instant quotes.</div>
-</div>
-<div class="faq-item">
-<div class="faq-question">Can you paint fences and gates both sides?</div>
-<div class="faq-answer">Yes. We can paint or stain both sides for a professional finish and long-lasting protection.</div>
-</div>
-<div class="faq-item">
-<div class="faq-question">How long will the work take?</div>
-<div class="faq-answer">Duration depends on property size and work type across DN1–DN6 and nearby villages. We provide an estimated timeframe during your free quote visit.</div>
-</div>
-<div class="faq-item">
-<div class="faq-question">Do you provide advice on paint types and finishes?</div>
-<div class="faq-answer">Yes, we provide professional advice on paint types, finishes, and materials suitable for your property and fence or gate. Call 07735 873694 for a consultation.</div>
-</div>
 
-<!-- Related Instant Quotes Section -->
-<section style="text-align:center; margin:40px 0;">
-<h2>You may also be interested in some of our other instant quotes for exterior painting</h2>
-<div style="margin-top:15px;">
-<a href="https://homerepairs4u.com/quotes/house-painting.html" class="call-btn" style="margin-right:10px;" title="Get an instant external house painting quote">External House Painting</a>
-<a href="https://homerepairs4u.com/quotes/rail-painting.html" class="call-btn" title="Get an instant metal rail and gate painting quote">Metal Rail & Gate Painting</a>
+<h3>Do you service every village around Askern?</h3>
+<p>Yes — we cover all postcodes DN1–DN6 and every listed village, hamlet, and settlement within approximately six miles of Askern DN6.</p>
+
+<h3>Can I get an online quote?</h3>
+<p>Yes — our instant quote calculators for fence painting, gate staining, and house painting allow you to get accurate estimates within minutes.</p>
+
+<h3>Are your services guaranteed?</h3>
+<p>Absolutely — all exterior work is completed to a high professional standard and backed by our satisfaction guarantee.</p>
+
+<h2>You May Also Be Interested In</h2>
+<p>Explore our other instant quote tools for exterior painting services:</p>
+<div class="cta" style="text-align:center;">
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="call-btn">External House Painting</a>
+<a href="https://homerepairs4u.com/quotes/rail-painting.html" class="call-btn">Metal Rail & Gate Painting</a>
 </div>
-</section>
 
 </main>
 
 <footer class="site-footer">
-© Home Repairs 4U | 35 Airstone Road, Askern, Doncaster, South Yorkshire, DN6 0QA | Call 07735 873694
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
 <div class="footer-services">
 <p style="color: white;">Our Services:</p>
 <a href="/services/Exterior-decorating.html">Exterior Decorating</a>
@@ -345,16 +211,6 @@ loading="lazy">
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
-
-<script>
-const faqQuestions = document.querySelectorAll('.faq-question');
-faqQuestions.forEach(item=>{
-item.addEventListener('click',()=>{
-const answer = item.nextElementSibling;
-answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
-});
-});
-</script>
 
 </body>
 </html>
