--- a/locations.html
+++ b/locations.html
@@ -224,11 +224,7 @@ font-weight:bold;
 
 <p>Home Repairs 4U provides professional painting, decorating, fence and gate painting or staining, and home repair services across Askern DN6 and the wider DN postcode area, covering DN1 to DN6 and all surrounding villages within roughly six miles. We deliver reliable, high-quality services for residential properties, gardens, fences, gates, and exterior painting or staining.</p>
 
-<p>Our team visits your property to provide a free, no-obligation quote, offering expert advice on materials, finishes, and colour options to protect and enhance your home. 📞 <a href="tel:07735873694" title="Call Home Repairs 4U now">Call now</a> to schedule your visit.</p>
-
-<div class="quote-callout">
-📞 Call 07735 873694 today for a free no-obligation quote within six miles of Askern DN6!
-</div>
+<p>Our team visits your property to provide a free, no-obligation quote, offering expert advice on materials, finishes, and colour options to protect and enhance your home.
 
 <h2>Postcode Areas We Cover</h2>
 <ul>
