--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@ loading="lazy">
 <img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
 </a>
 </div>
-
+  
+<a href="https://homerepairs4u.com/house-painting.html" class="service-btn">Instant Exterior Painting Quote</a>
 <a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
 
 <!-- Fence Installation -->
