--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ loading="lazy">
 </div>
   
 <a href="https://homerepairs4u.com/house-painting.html" class="service-btn">Instant Exterior Painting Quote</a>
+<a href="https://homerepairs4u.com/house-painting.html" class="service-btn">Instant Gate and Rail painting Quote</a>
 <a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
 
 <!-- Fence Installation -->
