--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ loading="lazy">
 </a>
 </div>
   
-<a href="https://homerepairs4u.com/house-painting.html" class="service-btn">Instant Exterior Painting Quote</a>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="service-btn">Instant Exterior Painting Quote</a>
 <a href="https://homerepairs.com/quotes/rail-painting.html" class="service-btn">Instant Gate and Rail painting Quote</a>
 <a href="https://homerepairs.com/quotes/fence-quote.html" class="service-btn">Instant Fence Painting Quote</a>
 <a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
