--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -1,18 +1,32 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+
+<title>Fence Installation in Askern DN6 | Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/services/fence-installation.html">
+<meta name="description" content="Professional fence installation in Askern DN6 and surrounding areas. We specialise in featheredge fencing with concrete posts and gravel boards. Call 07735 873694.">
+
+<link rel="preload" as="image" href="/images/logo.webp" />
+
 <style>
-/* HEADER STYLING */
+body{
+margin:0;
+padding:0;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
+}
 header{
 text-align:center;
 padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-
-.logo{
-max-height:90px;
-width:auto;
-}
-
-/* CALL BUTTON */
+.logo{max-height:90px;width:auto;}
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -25,13 +39,28 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{
-background:#333;
-color:#fff;
+.call-btn:hover{ background:#333; }
+main{
+max-width:900px;
+margin:0 auto;
+background:#fff;
+padding:25px 15px;
 }
-
-/* FOOTER */
-.site-footer{
+h1,h2,h3{ color:#111; }
+.service-btn{
+display:inline-block;
+margin-top:15px;
+padding:12px 24px;
+background:#000;
+color:#fff;
+font-size:18px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.service-btn:hover{ background:#333; }
+footer{
 background:#000;
 color:#fff;
 text-align:center;
@@ -40,49 +69,149 @@ margin-top:40px;
 font-size:14px;
 }
 
-.footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
+/* Lightbox */
+.lightbox {
+display: none;
+position: fixed;
+z-index: 9999;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background: rgba(0,0,0,0.85);
+align-items: center;
+justify-content: center;
 }
-
-.footer-services a{
-color: white;
-margin: 0 10px;
+.lightbox img {
+max-width: 95%;
+max-height: 95%;
+border-radius: 6px;
+box-shadow: 0 0 20px #000;
 }
+.lightbox:target { display: flex; }
 </style>
+</head>
 
+<body>
 
-<!-- ✅ HEADER -->
+<!-- HEADER (UNCHANGED) -->
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
+<main>
 
-<!-- ✅ FOOTER -->
-<footer class="site-footer">
-© Home Repairs 4U | Askern DN6 | Call 07735 873694
+<h1>Fence Installation in Askern DN6</h1>
 
-<div class="footer-services">
-<p style="color: white;">Our Services:</p>
-<a href="/services/Exterior-decorating.html">Exterior Decorating</a>
-<a href="/services/garden.html">Garden</a>
-<a href="/services/guttering.html">Guttering</a>
-<a href="/services/Pressure-washing.html">Pressure Washing</a>
-<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<p>
+Home Repairs 4U provides professional fence installation in Askern DN6 and surrounding areas. We install strong, long-lasting fencing designed to give privacy, security, and a clean finish to your garden or property boundary.
+</p>
+
+<p>
+Our most popular and reliable fencing system is <strong>featheredge fencing with concrete posts and gravel boards</strong>. This type of fencing is ideal for British weather and offers excellent durability compared to lightweight panel systems.
+</p>
+
+<h2>Our Main Fencing System</h2>
+
+<p>
+The typical type of fence we install is:
+</p>
+
+<ul>
+<li>Featheredge boards for strength and privacy</li>
+<li>Concrete posts for maximum stability</li>
+<li>Concrete gravel boards to protect timber from rot</li>
+</ul>
+
+<p>
+This system is built on site, not slotted in like cheap panels. Each featheredge board overlaps the next, creating a solid fence that can handle wind, rain, and long-term use.
+</p>
+
+<h2>Why Choose Featheredge Fencing?</h2>
+
+<p>
+Featheredge fencing is one of the strongest and most professional-looking fencing options available. Because it is built board by board, it can be adjusted to uneven ground, slopes, and awkward boundaries.
+</p>
+
+<p>
+Concrete posts and gravel boards stop timber from sitting directly on soil, which greatly reduces rot and extends the life of your fence.
+</p>
+
+<h2>Fence Installation Process</h2>
+
+<p>
+Every fence installation follows a proper process:
+</p>
+
+<ul>
+<li>Old fencing removed and disposed of</li>
+<li>Post holes dug to correct depth</li>
+<li>Concrete posts set and levelled</li>
+<li>Concrete gravel boards installed</li>
+<li>Featheredge boards fixed securely</li>
+<li>Final checks for strength and alignment</li>
+</ul>
+
+<p>
+We take pride in straight lines, solid fixing, and a neat finish.
+</p>
+
+<h2>Fence Installation Example</h2>
+
+<!-- Fence Image Kept -->
+<a href="#fence-lightbox">
+<img src="/images/fence-before-after.webp"
+alt="Fence installation before and after example"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="fence-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/fence-before-after.webp" alt="Fence installation before and after example enlarged">
+</a>
+</div>
+
+<h2>Repair or Replace?</h2>
+
+<p>
+If your fence is leaning, broken, or rotten at the base, it is often better to replace it fully using concrete posts and gravel boards. This prevents the same problems coming back in a few years.
+</p>
+
+<p>
+We also offer fence repairs where possible, but we will always give honest advice on whether repair or replacement is best value long-term.
+</p>
+
+<h2>Areas We Cover</h2>
+
+<p>
+We install fencing across Askern DN6 and surrounding areas. If you are local, just call and we’ll confirm availability and arrange a visit.
+</p>
+
+<a href="tel:07735873694" class="service-btn">Call for Fence Installation</a>
+
+</main>
+
+<!-- FOOTER (UNCHANGED) -->
+<footer>
+<p>📞 Call 07735 873694</p>
+<div>
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+<br><br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">Facebook</a>
+<br><br>
+© Home Repairs 4U | Service Areas, Doncaster
 </div>
 </footer>
+
+</body>
+</html>
