--- a/test.html
+++ b/test.html
@@ -1,73 +1,96 @@
-<div id="postcode-widget"></div>
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Fence Installation Calculator | Askern DN6</title>
+<meta name="description" content="Fence installation calculator for Askern and within 6 miles. Calculate fence panels, posts, gravel boards, post mix and labour instantly.">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/fence-calculator.html">
+
+<style>
+body{font-family:Arial,sans-serif;margin:0;background:#f9f9f9;color:#222;}
+main{max-width:800px;margin:40px auto;background:#fff;padding:25px;border-radius:6px;}
+h1,h2{color:#111;}
+label{display:block;margin-top:12px;font-weight:bold;}
+input,select{width:100%;padding:10px;margin-top:5px;font-size:16px;border:2px solid #000;}
+button{margin-top:20px;padding:14px 30px;font-size:18px;background:#000;color:#fff;border:2px solid #000;border-radius:6px;cursor:pointer;}
+button:hover{background:#333;}
+.result{margin-top:25px;padding:20px;background:#f4f4f4;border-radius:6px;font-size:16px;}
+.line{margin-bottom:8px;}
+.total{font-size:20px;font-weight:bold;margin-top:15px;}
+</style>
+</head>
+<body>
+
+<!-- PASTE YOUR HEADER ABOVE THIS LINE -->
+
+<main>
+
+<h1>Fence Installation Calculator</h1>
+
+<p>
+Use this calculator to work out what you need for a new fence installation within around six miles of Askern DN6.
+It calculates materials and labour based on standard featheredge panels with concrete posts and gravel boards.
+</p>
+
+<h2>Fence Details</h2>
+
+<label>Total fence length (metres)</label>
+<input type="number" id="length" min="0" step="0.1">
+
+<label>Select fence panel height</label>
+<select id="height">
+<option value="0.9" data-price="30">0.9m – £30 per panel</option>
+<option value="1.2" data-price="35">1.2m – £35 per panel</option>
+<option value="1.5" data-price="40">1.5m – £40 per panel</option>
+<option value="1.8" data-price="45">1.8m – £45 per panel</option>
+</select>
+
+<button onclick="calculate()">Calculate Materials</button>
+
+<div id="result" class="result">
+Enter your details to see what you need.
+</div>
+
+</main>
+
+<!-- PASTE YOUR FOOTER BELOW THIS LINE -->
 
 <script>
-(function(){
-const servedAreas = ["DN1","DN2","DN3","DN4","DN5","DN6"]; // all DN areas you serve
+function calculate(){
+const length = parseFloat(document.getElementById("length").value)||0;
+const heightSelect = document.getElementById("height");
+const panelHeight = heightSelect.value;
+const panelPrice = parseFloat(heightSelect.options[heightSelect.selectedIndex].dataset.price);
 
-const box = document.getElementById("postcode-widget");
-box.style.fontFamily = "Arial, sans-serif";
-box.style.maxWidth = "400px";
-box.style.padding = "20px";
-box.style.border = "1px solid #ddd";
-box.style.borderRadius = "6px";
-box.style.background = "#fafafa";
+const panelWidth = 1.8;
+const panels = Math.ceil(length / panelWidth);
+const posts = panels + 1;
+const postPrice = 13;
+const gravelBoards = panels;
+const gravelPrice = 15;
+const postMixBags = posts * 2;
+const postMixPrice = 5;
+const labourPerPost = 70;
 
-const title = document.createElement("h3");
-title.textContent = "Check Your Postcode";
-title.style.marginTop = "0";
+const panelTotal = panels * panelPrice;
+const postTotal = posts * postPrice;
+const gravelTotal = gravelBoards * gravelPrice;
+const postMixTotal = postMixBags * postMixPrice;
+const labourTotal = posts * labourPerPost;
 
-const input = document.createElement("input");
-input.placeholder = "Enter your postcode";
-input.style.padding = "10px";
-input.style.width = "100%";
-input.style.boxSizing = "border-box";
-input.style.marginBottom = "10px";
-input.style.fontSize = "16px";
+const grandTotal = panelTotal + postTotal + gravelTotal + postMixTotal + labourTotal;
 
-const button = document.createElement("button");
-button.type = "button";
-button.textContent = "Check";
-button.style.padding = "10px 15px";
-button.style.fontSize = "16px";
-button.style.cursor = "pointer";
-button.style.background = "#000";
-button.style.color = "#fff";
-button.style.border = "2px solid #000";
-button.style.borderRadius = "4px";
-
-// Hover effect
-button.onmouseover = () => { button.style.background="#fff"; button.style.color="#000"; };
-button.onmouseout = () => { button.style.background="#000"; button.style.color="#fff"; };
-
-const result = document.createElement("div");
-result.style.marginTop = "15px";
-result.style.fontWeight = "bold";
-
-box.appendChild(title);
-box.appendChild(input);
-box.appendChild(button);
-box.appendChild(result);
-
-function normalize(str){
-return str.replace(/\s+/g,"").toUpperCase();
+document.getElementById("result").innerHTML = `
+<div class="line"><strong>Fence panels:</strong> ${panels} panels at ${panelHeight}m high (£${panelPrice} each) = £${panelTotal}</div>
+<div class="line"><strong>Concrete posts:</strong> ${posts} posts (£13 each) = £${postTotal}</div>
+<div class="line"><strong>Gravel boards:</strong> ${gravelBoards} boards (£15 each) = £${gravelTotal}</div>
+<div class="line"><strong>Post mix:</strong> ${postMixBags} bags (£5 each) = £${postMixTotal}</div>
+<div class="line"><strong>Labour:</strong> ${posts} posts × £70 = £${labourTotal}</div>
+<div class="total">Estimated Total: £${grandTotal}</div>
+`;
 }
-
-function check(){
-const key = normalize(input.value);
-const positive = servedAreas.some(area => key.startsWith(area));
-
-if(positive){
-result.textContent = "Yes — we cover this area";
-result.style.color = "green";
-} else {
-result.textContent = "Sorry — we do not cover this area";
-result.style.color = "red";
-}
-}
-
-button.addEventListener("click", check);
-input.addEventListener("keypress", function(e){
-if(e.key === "Enter") check();
-});
-})();
 </script>
+
+</body>
+</html>
